# rust-litex-hal

./: Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  deny.toml
.cargo/: config  config.toml
.github/workflows/: dependencies.yml  main.yml
examples/: counter.rs
litex-sim-pac/: .gitignore  Cargo.toml  build.rs
litex-sim-pac/src/: lib.rs
src/: gpio.rs  lib.rs  litei2cmaster.rs  spi.rs  timer.rs  uart.rs
xtask/: Cargo.toml
xtask/src/: main.rs
