[package]
name = "litex-hal"
version = "0.1.0"
authors = ["Pepijn de Vos <pepijndevos@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A embedded HAL crate for LiteX cores"
repository = "https://github.com/pepijndevos/rust-litex-hal"
readme = "README.md"

[dependencies]
nb = "1.0"
embedded-hal = { version = "0.2" }
