[package]
name = "litex-hal"
version = "0.2.0"
authors = ["Pepijn de Vos <pepijndevos@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A embedded HAL crate for LiteX cores"
repository = "https://github.com/pepijndevos/rust-litex-hal"
readme = "README.md"

[lib]
test = false
bench = false

[dependencies]
nb = "1.0"
embedded-hal = { version = "0.2" }

[dev-dependencies]
litex-sim-pac = { path = "litex-sim-pac" }
panic-halt = "0.2.0"

[features]
gpio = ["embedded-hal/unproven"]

[workspace]
members = ["litex-sim-pac"]
